--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "MySqlConnection": "server=localhost;user=root;password=krishna;database=Clinetra;Max Pool Size=100;"
+    //"MySqlConnection": "server=162.222.225.87;port=3306;user=conxtell;password=yl6s91^I6;database=conxtell;Max Pool Size=100;"
   },
   "Logging": {
     "LogLevel": {
