--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;user=root;password=krishna;database=Clinetra;Max Pool Size=100;"
-    //"MySqlConnection": "server=162.222.225.87;port=3306;user=Clinetra;password=2Ci81^sd2;database=Clinetra;Max Pool Size=100;"
+    "MySqlConnection": "server=162.222.225.87;port=3306;user=Clinetra;password=2Ci81^sd2;database=Clinetra;Max Pool Size=100;"
   },
   "Logging": {
     "LogLevel": {
